# codeslayer.ctags-plugin

./: Makefile.in  configure  configure.ac  ctags.codeslayer-plugin.in
.codeslayer/: autotools.conf  ctags.conf
ctags/: configure
ctags/.svn/: all-wcprops  entries
ctags/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  configure.ac.svn-base  configure.svn-base
ctags/autom4te.cache/: output.1  traces.0  traces.1
ctags/build-prod/: Makefile  config.status  libtool
ctags/build-prod/src/: Makefile  libctagscodeslayerplugin.la  libctagscodeslayerplugin_la-ctags-configuration.lo  libctagscodeslayerplugin_la-ctags-engine.lo  libctagscodeslayerplugin_la-ctags-menu.lo  libctagscodeslayerplugin_la-ctags-plugin.lo  libctagscodeslayerplugin_la-ctags-project-properties.lo  libctagscodeslayerplugin_la-readtags.lo
ctags/build-prod/src/.deps/: libctagscodeslayerplugin_la-ctags-configuration.Plo  libctagscodeslayerplugin_la-ctags-engine.Plo  libctagscodeslayerplugin_la-ctags-menu.Plo  libctagscodeslayerplugin_la-ctags-plugin.Plo  libctagscodeslayerplugin_la-readtags.Plo  (+1 more)
ctags/src/: Makefile.in  ctags-configuration.c
ctags/src/.svn/: all-wcprops  entries
m4/.svn/: all-wcprops  entries
src/: Makefile.am  Makefile.in  ctags-config.c  ctags-config.h  ctags-configuration.h  ctags-engine.c  ctags-engine.h  ctags-menu.c  ctags-menu.h  ctags-path-node.c  ctags-path-node.h  ctags-plugin.c  ctags-project-properties.c  ctags-project-properties.h  navigation-engine.c
src/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  ctags-menu.h.svn-base
(+6 files in other folders)
