lib_LTLIBRARIES = libctagscodeslayerplugin.la

libctagscodeslayerplugin_la_SOURCES = \
    ctags-plugin.c \
    ctags-config.c \
    ctags-config.h \
    ctags-project-properties.c \
    ctags-project-properties.h \
    ctags-engine.c \
    ctags-engine.h \
    ctags-menu.c \
    ctags-menu.h \
    ctags-path-node.h \
    ctags-path-node.c \
    readtags.c \
    readtags.h

libctagscodeslayerplugin_la_CPPFLAGS = $(CTAGSCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
